--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,13 @@
   background-color: #11112b;
 }
 
+.skills-bar > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: bold;
+}
+
 .project-card {
   background-color: rgba(255, 255, 255, 0.08);
   opacity: 0;
